Minor fixes, History format time to HH:MM:SS, fixed question wrapping text, table color change

--- a/Project/src/view/resources/Css/popUpStyle.css
+++ b/Project/src/view/resources/Css/popUpStyle.css
@@ -130,8 +130,14 @@
 }
 
 .question_Text {
-	-fx-font-size: 15.0pt;
+	-fx-font-size: 20pt;
+    -fx-font-weight: bold;
+    -fx-effect: dropshadow(three-pass-box, #ffffff, 2.0, 2.0, 0.0, 0.0);
 }
 
+.secondary_Text {
+	-fx-font-size: 20pt;
+    -fx-font-weight: bold;
+}
 
 
